# service/EthereumSmartContractService.js
@@ -1,24 +1,11 @@
 'use strict';
-
-
-/**
- * Deploys a generated Smart Contract for Media
- *
- * scmIdref scmIdref Alphanumeric ID of the smart contract for media
- * returns String
- **/
-exports.deploySmartContract = function(scmIdref) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = "";
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
+const {
+  generateMediaSmartContract,
+  OffChainStorage,
+  SmartContractParser,
+} = require('ethereum-smart-contracts-for-media');
+var MediaContractualObjectsContract = require('./MediaContractualObjectsContractService');
+const sec = require('../.secret.json');
 
 /**
  * Generates a Smart Contract for Media from a set of Media Contractual Objects
@@ -26,18 +13,23 @@ exports.deploySmartContract = function(scmIdref) {
  * contractIdref contractIdref Alphanumeric ID of the contract to get
  * returns scmIdref
  **/
-exports.generateSmartContract = function(contractIdref) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = "";
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
+exports.generateSmartContract = function (contractIdref) {
+  return new Promise(function (resolve, reject) {
+    MediaContractualObjectsContract.getContract(contractIdref)
+      .then(function (contract) {
+        try {
+          const res = generateMediaSmartContract(contract);
+          resolve(res);
+        } catch (error) {
+          console.log(error);
+          reject({ errorType: error.name, code: 500 });
+        }
+      })
+      .catch(function (response) {
+        reject(response);
+      });
   });
-}
-
+};
 
 /**
  * Parses a Smart Contract for Media from an Ethereum address and creates a set of Media Contractual Objects
@@ -45,15 +37,21 @@ exports.generateSmartContract = function(contractIdref) {
  * body String  (optional)
  * returns contractIdref
  **/
-exports.parseSmartContract = function(body) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = "";
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
+exports.parseSmartContract = function (body) {
+  return new Promise(async function (resolve, reject) {
+    try {
+      const ipfs = new OffChainStorage();
+      const pars = new SmartContractParser(
+        `https://ropsten.infura.io/v3/${sec.infura}`,
+        ipfs,
+        body,
+        3
+      );
+      const res = await pars.parseSmartContract();
+      resolve(res);
+    } catch (error) {
+      console.log(error);
+      reject({ errorType: error.name, code: 500 });
     }
   });
-}
-
+};
